--- a/MyNotebook.ipynb
+++ b/MyNotebook.ipynb
@@ -29,10 +29,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 3\n",
+    "x += 1\n",
+    "print(x)"
+   ]
   }
  ],
  "metadata": {
